objects/wkitsm__CaseAssociation__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__AssociationType__c</fullName>
        <description>Describes the relationship between the two Cases</description>
        <label>Association Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>related to</fullName>
                    <default>true</default>
                    <label>related to</label>
                </value>
                <value>
                    <fullName>is duplicated by</fullName>
                </value>
                <value>
                    <fullName>is blocked by</fullName>
                </value>
                <value>
                    <fullName>blocks</fullName>
                </value>
                <value>
                    <fullName>duplicates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__CaseId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case Id</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>CaseAssociations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__RelatedCaseId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Case Id</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>CaseAssociationsRelatedCase</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Case Association</label>
    <nameField>
        <label>CaseAssociation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>